--- a/EntityAbstractions.Persistence.csproj
+++ b/EntityAbstractions.Persistence.csproj
@@ -8,16 +8,16 @@
 
   <PropertyGroup>
     <PackageId>EntityAbstractions.Persistence</PackageId>
-    <Version>1.0.0</Version>
+    <Version>1.0.1</Version>
     <Authors>Matheus Câmara</Authors>
     <Company>Petting</Company>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="EntityAbstractions" Version="1.0.0" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.3" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="6.0.3" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.5" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc" Version="2.2.0" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Relational" Version="6.0.5" />
   </ItemGroup>
 
 </Project>
